# Jaudio2zh

./: .gitignore  README.md  README_en.md  combine_text_and_timeline.py  prompt.txt  pyproject.toml  translate.py
src/jaudio2zh/: cli.py  logging_utils.py  subtitles.py  transcriber.py  translator.py  types.py
